Initial commit: the beginning of the Woods Cloud Application

--- a/src/main/resources/templates/filesListForm.html
+++ b/src/main/resources/templates/filesListForm.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>FilesList</title>
 </head>
-<body>
+<a>
 
     <h3>FilesList in the mentioned directory</h3>
     <table>
@@ -13,5 +13,6 @@
         </tr>
     </table>
     <a href="/filepath">Enter another filepath</a>
+    <a href="/data">See the data </a>
 </body>
 </html>
