--- a/src/main/resources/templates/filesListForm.html
+++ b/src/main/resources/templates/filesListForm.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>FilesList</title>
 </head>
-<a>
+<body>
 
     <h3>FilesList in the mentioned directory</h3>
     <table>
